--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section id="play">
             <h2>Play the Mod</h2>
             <p>Get right into the action! Enjoy Sprunki BPAJHTSM Mod by playing it directly below:</p>
-            <iframe src="sprunki.html" width="800" height="600" frameborder="0"></iframe>
+            <iframe src="https://itch.io/embed-upload/12126116?color=f571ff" width="800" height="600" frameborder="0"></iframe>
         </section>
 
         <!-- Community Section -->
