--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprunki BPAJHTSM Mod Official Website</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Add Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -17,6 +16,8 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#play">Play</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#updates">Updates</a></li>
                 <li><a href="#community">Community</a></li>
                 <li><a href="#download">Download</a></li>
             </ul>
@@ -36,28 +37,51 @@
         <section id="play">
             <h2>Play the Mod</h2>
             <p>Get right into the action! Enjoy Sprunki BPAJHTSM Mod by playing it directly below:</p>
-            <iframe src="https://itch.io/embed-upload/12126116?color=f571ff" width="800" height="600" frameborder="0"></iframe>
+            <iframe src="sprunki.html" width="800" height="600" frameborder="0"></iframe>
+        </section>
+
+        <!-- Features Section -->
+        <section id="features">
+            <h2>Key Features</h2>
+            <ul>
+                <li><strong>Pinki's Aura Melody:</strong> A mesmerizing tune that holds continuously for a soothing gameplay experience.</li>
+                <li><strong>Jevin's Space Sounds:</strong> The iconic "OOOOOOOOOOOOOOOOOH!" adds a quirky, cosmic vibe.</li>
+                <li><strong>Cheat Codes:</strong> Unlock fun customizations like Wenda's and Brud's smug expressions.</li>
+                <li><strong>Custom Settings:</strong> Personalize your gameplay with new options and favorite character toggles.</li>
+            </ul>
+        </section>
+
+        <!-- Updates Section -->
+        <section id="updates">
+            <h2>Latest Updates</h2>
+            <p>
+                Keep track of the latest developments and improvements in Sprunki BPAJHTSM Mod:
+            </p>
+            <ul>
+                <li>Version 1.0.0 released with enhanced visuals and smoother performance.</li>
+                <li>Expanded gallery with new images and artwork.</li>
+                <li>Customizable settings now available, including light/dark mode.</li>
+            </ul>
         </section>
 
         <!-- Community Section -->
         <section id="community">
             <h2>Join the Community</h2>
             <p>
-                Share your creations, discover mods, and connect with fellow Sprunki fans. Check out community builds, tips, and ideas to take your gameplay to the next level.
+                Share your creations, discover mods, and connect with fellow Sprunki fans. The community thrives on your creativity and feedback, so join the conversation and let your voice be heard.
             </p>
         </section>
 
-<!-- Download Section -->
-<section id="download">
-    <h2>Download the Mod</h2>
-    <p>
-        Ready to play on your own? Download the latest version of Sprunki BPAJHTSM Mod and start your adventure today.
-    </p>
-    <a href="https://mega.nz/file/VpZQjZJD#q3RpMnLKEOJIJ-ZSaK1h4yqAZxAssyLnN-aZZOMC8-c" class="download-button" target="_blank">
-        Download Now
-    </a>
-</section>
-
+        <!-- Download Section -->
+        <section id="download">
+            <h2>Download the Mod</h2>
+            <p>
+                Ready to play on your own? Download the latest version of Sprunki BPAJHTSM Mod and start your adventure today.
+            </p>
+            <a href="https://mega.nz/file/VpZQjZJD#q3RpMnLKEOJIJ-ZSaK1h4yqAZxAssyLnN-aZZOMC8-c" class="download-button" target="_blank">
+                Download Now
+            </a>
+        </section>
     </main>
 
     <footer>
